# CrossPlatformSockets

./: CMakeLists.txt  README.md
doc/: ClassDiagram.wsd
scripts/: BuildAndRunTests.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt  ITcpListener.hpp  ITcpStream.hpp  SocketAddress.cpp  SocketAddress.hpp
src/windows/: CMakeLists.txt  IpV4Address.cpp  IpV4Address.hpp  IpV6Address.cpp  IpV6Address.hpp  TcpListener.cpp  TcpListener.hpp  TcpStream.hpp  WinSockInitiator.hpp
tests/: CMakeLists.txt  Test_IpV4Address.cpp  Test_IpV6Address.cpp  Test_SocketAddress.cpp  Test_TcpListener.cpp  Test_TcpStream.cpp
