message("--> CrossPlatformSockets src CMakeLists.txt")

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/common)

set(CROSS_PLATFORM_SOCKETS_SOURCE_FILES
    
    CACHE INTERNAL "CROSS_PLATFORM_SOCKETS_SOURCE_FILES")

set(CROSS_PLATFORM_SOCKETS_HEADER_FILES
    ${CROSS_PLATFORM_SOCKETS_COMMON_HEADER_FILES}
    
    CACHE INTERNAL "CROSS_PLATFORM_SOCKETS_HEADER_FILES")

set(CROSS_PLATFORM_SOCKETS_INCLUDE_DIRS
    ${CMAKE_CURRENT_LIST_DIR}
    ${CROSS_PLATFORM_SOCKETS_COMMON_INCLUDE_DIRS}
   
    CACHE INTERNAL "CROSS_PLATFORM_SOCKETS_INCLUDE_DIRS")