message("--> CrossPlatformSockets src CMakeLists.txt")

# Add common files
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/common)

set(CROSS_PLATFORM_SOCKETS_SOURCE_FILES ${CROSS_PLATFORM_SOCKETS_COMMON_SOURCE_FILES})
set(CROSS_PLATFORM_SOCKETS_HEADER_FILES ${CROSS_PLATFORM_SOCKETS_COMMON_HEADER_FILES})
set(CROSS_PLATFORM_SOCKETS_INCLUDE_DIRS ${CROSS_PLATFORM_SOCKETS_COMMON_INCLUDE_DIRS})
set(CROSS_PLATFORM_SOCKETS_LIBS "")

# Add OS specific files
if (WIN32)
   message("--> Windows detected!")

   add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/windows)

   set(CROSS_PLATFORM_SOCKETS_SOURCE_FILES
       ${CROSS_PLATFORM_SOCKETS_SOURCE_FILES}
       ${CROSS_PLATFORM_SOCKETS_WINDOWS_SOURCE_FILES}
       
       CACHE INTERNAL "CROSS_PLATFORM_SOCKETS_SOURCE_FILES")

   set(CROSS_PLATFORM_SOCKETS_HEADER_FILES
       ${CROSS_PLATFORM_SOCKETS_HEADER_FILES}
       ${CROSS_PLATFORM_SOCKETS_WINDOWS_HEADER_FILES}
       
       CACHE INTERNAL "CROSS_PLATFORM_SOCKETS_HEADER_FILES")

   set(CROSS_PLATFORM_SOCKETS_INCLUDE_DIRS
       ${CROSS_PLATFORM_SOCKETS_INCLUDE_DIRS}
       ${CROSS_PLATFORM_SOCKETS_WINDOWS_INCLUDE_DIRS}
       
       CACHE INTERNAL "CROSS_PLATFORM_SOCKETS_INCLUDE_DIRS")

   set(CROSS_PLATFORM_SOCKETS_LIBS
       ${CROSS_PLATFORM_SOCKETS_LIBS}
       ${CROSS_PLATFORM_SOCKETS_WINDOWS_LIBS}
       
       CACHE INTERNAL "CROSS_PLATFORM_SOCKETS_LIBS")

endif()